kubernetes/apps/monitoring/grafana/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
      namespace: monitoring
      sectionName: https-grafana
  hostnames:
    - grafana.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
